--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <ul class="navbar-list flex">
           <li><a class="navbar-link" href="#">HOME</a></li>
           <li><a class="navbar-link" href="#Feacture_section">FEATURES</a></li>
-          <li><a class="navbar-link" href="#">RESUME</a></li>
+          <li><a class="navbar-link" href="./Shehbaz_Resume.pdf">RESUME</a></li>
           <li><a class="navbar-link" href="#">CONTACT</a></li>
-          <button class="custom-btn btn-15">HIRE ME</button>
+          <button class="custom-btn btn-15"><a href="./Shehbaz_Resume.pdf">HIRE ME</a></button>
         </ul>
       </nav>
       <div class="mob-nav-btn">
@@ -73,10 +73,10 @@
               <a href="https://github.com/Shehbaz456">
                 <div class="icon-skill"><img src="./image/icons8-github.svg" alt=""></div>
               </a>
-              <a href="https://www.linkedin.com/in/shehbaz-%F0%9F%A4%8D-823730228/">
+              <a href="https://www.linkedin.com/in/shehbazlovedev/">
                 <div class="icon-skill"><img src="./image/icons8-linkedin.svg" alt=""></div>
               </a>
-              <a href="#">
+              <a href="mailto:iamshehbaz01@gmail.com">
                 <div class="icon-skill"><img src="./image/icons8-gmail.svg" alt=""></div>
               </a>
             </div>
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="sl2-top-con">
           <p style="color: var(--pri-pink-col); font-size: var(--p-fontsize1); padding-bottom: 2rem;">FEATURES</p>
-          <h2 style="font-size: 5rem; font-weight: 700; padding-bottom: 2rem;">WHAT I DO</h2>
+          <h2 style="font-size: 4rem; font-weight: 700; padding-bottom: 2rem;">WHAT I DO</h2>
         </div>
       </div>
 
@@ -115,45 +115,6 @@
           <p class="sl2-headig">Customized Solutions</p>
           <p class="sl2-sub-heading">
             Tailored web development to meet specific business needs, ensuring a unique and effective online presence.
-          </p>
-        </div>
-        <div class="sl2-card sl2-card2-bottom-col">
-          <div class="sl2-icon sl2-icon2-col button">
-            <button>
-              <img style="width: 50px;" src="svg-export/backend 2.svg" alt="">
-            </button>
-          </div>
-          <p class="sl2-headig">Placement Preparation</p>
-          <p class="sl2-sub-heading">
-            Ace the placement interviews by being knowledgeable in all well-known data structures, popular
-            problem-solving
-            methods, and core computer sciences.
-          </p>
-        </div>
-
-        <div class="sl2-card sl2-card3-bottom-col">
-          <div class="sl2-icon sl2-icon3-col ">
-            <button>
-              <img src="svg-export/svgexport-12.svg" alt="">
-            </button>
-          </div>
-          <p class="sl2-headig">Hand Picked Question</p>
-          <p class="sl2-sub-heading">
-            Get access to hand-picked coding interview questions across categories & difficulty levels that will prepare
-            you for every interview you would encounter.
-          </p>
-        </div>
-
-        <div class="sl2-card sl2-card4-bottom-col">
-          <div class="sl2-icon sl2-icon4-col ">
-            <button>
-              <img src="svg-export/svgexport-13.svg" alt="">
-            </button>
-          </div>
-          <p class="sl2-headig">SEO Strategic</p>
-          <p class="sl2-sub-heading">
-            Employing advanced SEO strategies, we optimize your online visibility and help drive organic traffic to your
-            website for improved business outcomes.
           </p>
         </div>
 
@@ -187,6 +148,11 @@
     </div>
 
   </section>
+
+
+
+
+
   <div class="empty-space" style="margin-inline: auto;width: 90%; border-top: 1px solid rgb(160, 157, 157);"></div>
 
 
@@ -198,12 +164,10 @@
     <div class="heading-con text-center">
       <p style="color: var(--pri-pink-col); font-size: var(--p-fontsize1); padding-bottom: 2rem;">VISIT MY Projects AND
         KEEP YOUR FEEDBACK</p>
-      <h2 style="font-size: 5rem; font-weight: 700; padding-bottom: 4rem;">My Projects</h2>
+      <h2 style="font-size: 4rem; font-weight: 700; padding-bottom: 4rem;">My Projects</h2>
     </div>
 
-    <section class="mackbook">
-      <img width="100%" src="./image/code help mackbook design.png" alt="">
-    </section>
+   
 
     <div class="proj-card-con flex">
 
@@ -215,7 +179,7 @@
             <p>DEVELOPMENT</p>
             <div class="flex" style="gap: 10px;">
               <i class='bx bx-heart'></i>
-              <p>600</p>
+              <p>340</p>
             </div>
           </div>
           <a href="https://shehbaz456.github.io/Code-Help/" target="_blank">
@@ -253,7 +217,7 @@
             <p>DEVELOPMENT</p>
             <div class="flex" style="gap: 10px;">
               <i class='bx bx-heart'></i>
-              <p>600</p>
+              <p>530</p>
             </div>
           </div>
           <a href="https://shehbaz456.github.io/Cheat-Sheet-Template/" target="_blank">
@@ -271,7 +235,7 @@
             <p>DEVELOPMENT</p>
             <div class="flex" style="gap: 10px;">
               <i class='bx bx-heart'></i>
-              <p>600</p>
+              <p>320</p>
             </div>
           </div>
           <a href="https://shehbaz456.github.io/Color-picker/" target="_blank">
@@ -289,7 +253,7 @@
             <p>DEVELOPMENT</p>
             <div class="flex" style="gap: 10px;">
               <i class='bx bx-heart'></i>
-              <p>600</p>
+              <p>390</p>
             </div>
           </div>
           <a href="https://shehbaz456.github.io/Temperature-Converter/" target="_blank">
@@ -307,7 +271,7 @@
             <p>DEVELOPMENT</p>
             <div class="flex" style="gap: 10px;">
               <i class='bx bx-heart'></i>
-              <p>600</p>
+              <p>463</p>
             </div>
           </div>
           <a href="https://shehbaz456.github.io/microsoft-landing-page/" target="_blank">
@@ -317,6 +281,11 @@
         </div>
       </div>
     </div>
+    <br>
+    <section class="mackbook">
+      <img width="100%" src="./image/code help mackbook design.png" alt="">
+    </section>
+
   </section>
   <!-- =====================================
       Start Our Resume section 
@@ -328,7 +297,7 @@
     <div class="heading-con text-center" style="padding-top: 7rem;">
       <p style="color: var(--pri-pink-col); font-size: var(--p-fontsize1); padding-bottom: 2rem;">VISIT MY RESUME AND
         KEEP YOUR FEEDBACK</p>
-      <h2 style="font-size: 5rem; font-weight: 700; padding-bottom: 4rem;">My Resume</h2>
+      <h2 style="font-size: 4rem; font-weight: 700; padding-bottom: 4rem;">My Resume</h2>
     </div>
   </section> -->
 
@@ -340,7 +309,7 @@
   <section style="background-color: var(--main-bg-col); padding-bottom: 8rem;">
     <div class="heading-con text-center" style="padding-top: 7rem;">
       <p style="color: var(--pri-pink-col); font-size: var(--p-fontsize1); padding-bottom: 2rem;">CONTACT</p>
-      <h2 style="font-size: 5rem; font-weight: 700; padding-bottom: 4rem;">CONTACT WITH US</h2>
+      <h2 style="font-size: 4rem; font-weight: 700; padding-bottom: 4rem;">CONTACT WITH US</h2>
     </div>
     <div class="contact-con">
       <div class="cont-left">
