--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a class="navbar-link" href="#Feacture_section">FEATURES</a></li>
           <li><a class="navbar-link" href="./Shehbaz_Resume.pdf">RESUME</a></li>
           <li><a class="navbar-link" href="#">CONTACT</a></li>
-          <button class="custom-btn btn-15"><a href="./Shehbaz_Resume.pdf">HIRE ME</a></button>
+          <a href="./Shehbaz_Resume.pdf"><button class="custom-btn btn-15">HIRE ME</button></a>
         </ul>
       </nav>
       <div class="mob-nav-btn">
