--- a/index.html
+++ b/index.html
@@ -446,6 +446,6 @@
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   
   <!-- Custom JavaScript -->
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
